--- a/hugo.yaml
+++ b/hugo.yaml
@@ -48,6 +48,15 @@ params:
   description: Clever Cloud is a Platform-as-a-Service (PaaS) cloud provider, an automated hosting platform for developers. Deploy your app easily and launch dependencies without having to worry about the infrastructure set up
   images:
   - images/feature.png
+  search:
+    enable: true
+    type: flexsearch
+
+    flexsearch:
+      # index page by: content | summary | heading | title
+      index: content
+      # full | forward | reverse | strict
+      tokenize: forward
   navbar:
     displayTitle: false
     displayLogo: true
