--- a/data/runtime_versions.yml
+++ b/data/runtime_versions.yml
@@ -5,7 +5,7 @@ node:
 bun:
   eol_source: "https://github.com/oven-sh/bun/releases"
   default:
-    - "1.2.17"
+    - "1.2.18"
 PHP:
   eol_source: "https://www.php.net/supported-versions.php"
   default:
@@ -63,7 +63,8 @@ java:
   default:
     - "11"
   accepted:
-    - "23"
+    - "24"
+    - "23 (EOL)"
     - "22 (EOL)"
     - "21"
     - "17"
