--- a/data/tooltips.toml
+++ b/data/tooltips.toml
@@ -1,5 +1,5 @@
-iaas  = "Infrastructure as a Service"
-paas  = "Platform as a Service"
+IaaS  = "Infrastructure-as-a-Service"
+PaaS  = "Platform-as-a-Service"
 WAR   = "Web Archive"
 JEE   = "Java Enterprise Edition"
 EAR   = "Enterprise Archive"
