--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,116 +1,36 @@
 baseURL: https://www.clever-cloud.com/developers
-languageCode: en-us
 title: Clever Cloud Documentation
 publishDir: public/developers
-pagination:
-  pagerSize: 21 # Number of entries in Changelog section before pagination
-
-enableGitInfo: true
 
 module:
   imports:
-    - path: github.com/imfing/hextra
+  - path: github.com/imfing/hextra
   hugoVersion:
     extended: true
-    min: "0.133.0"
-    max: "0.148.0"
+    min: 0.146.0
 
-outputs:
-  home: [HTML, LLMS]
-  page: [HTML, Markdown]
-  section: [HTML, Markdown, RSS]
+enableEmoji: true
+enableGitInfo: true
+enableInlineShortcodes: true
+hasCJKLanguage: true
 
-outputFormats:
-  LLMS:
-    mediaType: "text/plain"
-    baseName: "llms"
-    isPlainText: true
-
-  Markdown:
-    baseName: index.html
-
-privacy:
-  youtube:
-    privacyEnhanced: true
-
-defaultContentLanguage: en
-languages:
-  en:
-    languageName: English
-    weight: 1
-    title: Clever Cloud Documentation
-  #fr:
-    #languageName: Français
-    #weight: 2
-    #title: "Documentation de Clever Cloud "
-
-params:
-  description: Clever Cloud is a Platform-as-a-Service (PaaS) cloud provider, an automated hosting platform for developers. Deploy your app easily and launch dependencies without having to worry about the infrastructure set up.
-  images:
-  - images/feature.png
-  search:
-    enable: true
-    type: flexsearch
-
-    flexsearch:
-      # index page by: content | summary | heading | title
-      index: content
-      # full | forward | reverse | strict
-      tokenize: forward
-  navbar:
-    displayTitle: false
-    displayLogo: true
-    logo:
-      path: images/logo.svg
-      dark: images/logo-dark.svg
-      link: /developers
-      width: 175
-  comments:
-    enable: false
-    type: giscus
-  blog:
-    list:
-      displayTags: true
-
-    # https://giscus.app/
-    giscus:
-      repo: cnivolle/doc.clever-cloud.com
-      repoId: R_kgDOJ9fJag
-      category: General
-      categoryId: DIC_kwDOJ9fJas4CY7gW
-      mapping: pathname
-      # strict: 0
-      # reactionsEnabled: 1
-      # emitMetadata: 0
-      # inputPosition: top
-      # lang: en
-
-  footer:
-      displayCopyright: false
-      displayPoweredBy: false
-      width: normal
-
-  displayUpdatedDate: true
-  dateFormat: "January 2, 2006"
-
-  page:
-    # full (100%), wide (90rem), normal (1280px)
-    width: full
-  editURL:
-    enable: true
-    base: "https://github.com/CleverCloud/documentation/edit/main/content"
+languageCode: en-US
 
 markup:
+  highlight:
+    noClasses: false
   goldmark:
     renderer:
       unsafe: true
-  highlight:
-    noClasses: false
+    extensions:
+      passthrough:
+        delimiters:
+          block: [['\[', '\]'], ['$$', '$$']]
+          inline: [['\(', '\)']]
+        enable: true
 
-enableInlineShortcodes: true
 menu:
   main:
-
     - identifier: documentation
       name: Documentation
       pageRef: /doc
@@ -129,7 +49,7 @@ menu:
       weight: 4
     - identifier: components
       name: Web Components
-      url: "https://www.clever-cloud.com/developers/clever-components"
+      url: https://www.clever-cloud.com/developers/clever-components
       weight: 5
     - name: Search
       weight: 6
@@ -137,12 +57,12 @@ menu:
         type: search
     - name: GitHub
       weight: 7
-      url: "https://github.com/CleverCloud/documentation"
+      url: https://github.com/CleverCloud/documentation
       params:
         icon: github
     - name: Website
       weight: 8
-      url: "https://clever-cloud.com"
+      url: https://clever-cloud.com
       params:
         icon: globe-alt
 
@@ -153,22 +73,125 @@ menu:
         type: separator
       weight: 1
     - identifier: tips_and_tricks
-      name: "Tips & Tricks"
-      url: "/doc/best-practices/tips_and_tricks/"
+      name: Tips & Tricks
+      url: /doc/best-practices/tips_and_tricks/
       weight: 2
     - identifier: cli
-      name: "Clever Tools CLI"
-      url: "/doc/reference/cli"
+      name: Clever Tools CLI
+      url: /doc/reference/cli/
       weight: 3
     - identifier: envar
-      name: "Environment Variables"
-      pageRef: "/doc/reference/reference-environment-variables"
+      name: Environment Variables
+      pageRef: /doc/reference/reference-environment-variables
       weight: 4
     - identifier: common
-      name: "Common Configuration"
-      pageRef: "/doc/develop/common-configuration"
+      name: Common Configuration
+      pageRef: /doc/develop/common-configuration
       weight: 5
     - identifier: postmortem
-      name: "Postmortem"
-      pageRef: "/postmortem"
+      name: Postmortem
+      pageRef: /postmortem
       weight: 6
+
+outputs:
+  home: [HTML, LLMS]
+  page: [HTML, Markdown]
+  section: [HTML, Markdown, RSS]
+
+outputFormats:
+  LLMS:
+    mediaType: text/plain
+    baseName: llms
+    isPlainText: true
+
+  Markdown:
+    baseName: index.html
+
+pagination:
+  pagerSize: 21 # Number of entries in Changelog section before pagination
+
+params:
+  blog:
+    list:
+      displayTags: true
+      # date | lastmod | publishDate | title | weight
+      sortBy: date
+      sortOrder: desc # or "asc"
+
+    article:
+      displayPagination: true
+
+  comments:
+    enable: false
+    type: giscus
+    # https://giscus.app/
+    giscus:
+      repo: cnivolle/doc.clever-cloud.com
+      repoId: R_kgDOJ9fJag
+      category: General
+      categoryId: DIC_kwDOJ9fJas4CY7gW
+      mapping: pathname
+      # strict: 0
+      # reactionsEnabled: 1
+      # emitMetadata: 0
+      # inputPosition: top
+      # lang: en
+
+  description: Clever Cloud is a Platform-as-a-Service (PaaS) cloud provider, an automated hosting platform for developers. Deploy your app easily and launch dependencies without having to worry about the infrastructure set up.
+
+  displayUpdatedDate: true
+  dateFormat: January 2, 2006
+
+  editURL:
+    enable: true
+    base: https://github.com/CleverCloud/documentation/edit/main/content
+
+  footer:
+    enable: false
+    displayCopyright: false
+    displayPoweredBy: false
+    width: normal
+
+  highlight:
+    copy:
+      enable: true
+      # hover | always
+      display: hover
+
+  images:
+  - images/feature.png
+
+  navbar:
+    displayTitle: false
+    displayLogo: true
+    logo:
+      path: images/logo.svg
+      dark: images/logo-dark.svg
+      link: /developers
+      width: 175
+
+  page:
+    # full (100%), wide (90rem), normal (1280px)
+    width: full
+
+  search:
+    enable: true
+    type: flexsearch
+
+    flexsearch:
+      # index page by: content | summary | heading | title
+      index: content
+      # full | forward | reverse | strict
+      tokenize: forward
+
+  toc:
+    displayTags: true
+
+  theme:
+    # light | dark | system
+    default: system
+    displayToggle: true
+
+privacy:
+  youtube:
+    privacyEnhanced: true
