--- a/data/software_versions_shared_dedicated.yml
+++ b/data/software_versions_shared_dedicated.yml
@@ -1,41 +1,34 @@
-# Example usage:
-#myDB
-#  shared:
-#    - version_1
-#    - version_2
-#  dedicated:
-#    - version_1
-#    - version_1
-#    - version_2
-pg:
+dev_message: "**Important**: Dev plans are free and **solely for testing purposes**. They don't provide the same guarantees or SLAs as dedicated plans."
+
+elastic:
   dedicated:
-    - "v11.22 (EOL)"
-    - "v12.22 (EOL)"
-    - "v13.21"
-    - "v14.18"
-    - "v15.32"
-    - "v16.9"
-    - "v17.5"
-  dev:
-    - "v15"
-mysql:
-  dedicated:
-    - "5.7 (EOL)"
-    - "8.0"
-    - "8.4"
-  dev:
-    - "8.0"
+    - v7.17.10
+    - v8.10.2
+
 mongo:
   dedicated:
-    - "v4.0.3"
+    - v4.0.3
   dev:
-    - "v4.0.3"
-elasticsearch:
+    - v4.0.3
+
+mysql:
   dedicated:
-    - "v7.17.10"
-    - "v8.10.2"
+    - 5.7 (EOL)
+    - 8.0
+    - 8.4
+  dev:
+    - 8.0
+
+pg:
+  dedicated:
+    - v13.21
+    - v14.18
+    - v15.13
+    - v16.9
+    - v17.5
+  dev:
+    - v15.13
+
 redis:
   dedicated:
-    - "v8.0.1"
-
-dev_message: "**Important**: Dev plans are free and **solely for testing purposes**. They don't provide the same guarantees or SLAs as dedicated plans."
+    - v8.0.3
