--- a/hugo.yaml
+++ b/hugo.yaml
@@ -33,23 +33,23 @@ menu:
   main:
     - identifier: documentation
       name: Documentation
-      pageRef: /doc
+      pageRef: /doc/
       weight: 1
     - identifier: tutorials
       name: Guides
-      pageRef: /guides
+      pageRef: /guides/
       weight: 2
     - identifier: api
       name: API
-      pageRef: /api
+      pageRef: /api/
       weight: 3
     - identifier: changelog
       name: Changelog
-      pageRef: /changelog
+      pageRef: /changelog/
       weight: 4
     - identifier: components
       name: Web Components
-      url: https://www.clever.cloud/developers/clever-components
+      url: https://www.clever.cloud/developers/clever-components/
       weight: 5
     - name: Search
       weight: 6
@@ -57,12 +57,12 @@ menu:
         type: search
     - name: GitHub
       weight: 7
-      url: https://github.com/CleverCloud/documentation
+      url: https://github.com/CleverCloud/documentation/
       params:
         icon: github
     - name: Website
       weight: 8
-      url: https://clever-cloud.com
+      url: https://clever-cloud.com/
       params:
         icon: globe-alt
 
@@ -86,11 +86,11 @@ menu:
       weight: 4
     - identifier: common
       name: Common Configuration
-      pageRef: /doc/develop/common-configuration
+      pageRef: /doc/develop/common-configuration/
       weight: 5
     - identifier: postmortem
       name: Postmortem
-      pageRef: /postmortem
+      pageRef: /postmortem/
       weight: 6
 
 outputs:
@@ -144,7 +144,7 @@ params:
 
   editURL:
     enable: true
-    base: https://github.com/CleverCloud/documentation/edit/main/content
+    base: https://github.com/CleverCloud/documentation/edit/main/content/
 
   footer:
     enable: false
