--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ jobs:
   check-links:
     runs-on: ubuntu-latest
     needs: deploy-review-app
+    if: github.event.action != 'closed'
 
     steps:
       - name: Check links
