--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,8 @@ env:
   DOMAIN: ${{ github.event.pull_request.base.repo.name }}-PR-${{ github.event.number }}.cleverapps.io/developers
 
 jobs:
-  deploy-review-app:
+  review-app:
+    name: Review application
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -45,9 +46,12 @@ jobs:
           domain: ${{ env.DOMAIN }}
 
   check-links:
+    name: Check links
     runs-on: ubuntu-latest
-    needs: deploy-review-app
+    needs: review-app
     if: github.event.action != 'closed'
+    permissions:
+      contents: read
 
     steps:
       - name: Check links
