--- a/hugo.yaml
+++ b/hugo.yaml
@@ -176,13 +176,12 @@ params:
 
   search:
     enable: true
-    type: flexsearch
+    type: hextra
 
-    flexsearch:
-      # index page by: content | summary | heading | title
-      index: content
-      # full | forward | reverse | strict
-      tokenize: forward
+  docsearch:
+    appId: RCNP6XZZWS
+    apiKey: 6909e93402b6d4522a90f43ad144e233
+    indexName: documentation clever
 
   toc:
     displayTags: true
