--- a/hugo.yaml
+++ b/hugo.yaml
@@ -166,6 +166,7 @@ params:
       dark: images/logo-dark.svg
       link: /developers
       width: 175
+    width: wide
 
   page:
     # full (100%), wide (90rem), normal (1280px)
