--- a/hugo.yaml
+++ b/hugo.yaml
@@ -135,7 +135,7 @@ params:
       displayPagination: true
 
   description: Clever Cloud is a Platform-as-a-Service (PaaS) cloud provider, an automated hosting platform for developers. Deploy your app easily and launch dependencies without having to worry about the infrastructure set up.
-
+  
   displayUpdatedDate: true
   dateFormat: January 2, 2006
 
@@ -143,6 +143,8 @@ params:
     enable: true
     base: https://github.com/CleverCloud/documentation/edit/main/content/
 
+  externalLinkDecoration: true
+  
   footer:
     enable: false
     displayCopyright: false
