chore: move site links to clever.cloud

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -7,5 +7,5 @@ contact_links:
     url: https://console.clever-cloud.com/ticket-center-choice
     about: Get help with your Clever Cloud applications and services
   - name: 📧 Contact Sales & Enterprise
-    url: https://www.clever-cloud.com/contact/
+    url: https://www.clever.cloud/contact/
     about: Contact our sales team for business inquiries and enterprise solutions
