--- a/data/runtime_versions.yml
+++ b/data/runtime_versions.yml
@@ -3,6 +3,11 @@ bun:
   default:
     - 1.3.7
 
+caddy:
+  eol_source: https://github.com/caddyserver/caddy/releases
+  default:
+    - "2.10.2"
+
 dotnet:
   eol_source: https://dotnet.microsoft.com/en-us/platform/support/policy/dotnet-core
   default:
@@ -24,6 +29,15 @@ elixir:
     - 1.17
     - 1.18
     - 1.19
+
+frankenphp:
+  eol_source: https://github.com/dunglas/frankenphp/releases
+  default:
+    - "1.9.1"
+  caddy:
+    - "2.10.2"
+  php:
+    - "8.4.12"
 
 java:
   eol_source: https://adoptium.net/fr/support/
@@ -63,6 +77,16 @@ php:
     - 8.3
     - 8.4
     - 8.5
+
+sws:
+  eol_source: https://github.com/static-web-server/static-web-server/releases
+  default:
+    - "2.40.1"
+
+v:
+  eol_source: https://github.com/vlang/v/releases
+  default:
+    - "0.5"
 
 python:
   eol_source: https://devguide.python.org/versions/#python-release-cycle
