--- a/data/runtime_versions.yml
+++ b/data/runtime_versions.yml
@@ -1,7 +1,7 @@
 bun:
   eol_source: https://github.com/oven-sh/bun/releases
   default:
-    - 1.3.8
+    - 1.3.9
 
 caddy:
   eol_source: https://github.com/caddyserver/caddy/releases
@@ -15,14 +15,13 @@ dotnet:
   accepted:
     - 6.0 (EOL)
     - 9.0
+    - 10.0 (LTS)
 
 elixir:
   eol_source: https://hexdocs.pm/elixir/compatibility-and-deprecations.html
   default:
     - 1.19
   accepted:
-    - 1.12 (EOL)
-    - 1.13 (EOL)
     - 1.14 (EOL)
     - 1.15
     - 1.16
@@ -100,3 +99,4 @@ python:
     - 3.11
     - 3.12
     - 3.13
+    - 3.14
